Fix historyjs error in header article link + add transition for header article

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,7 @@ table {
 	bottom: 0;
 }
 
+.main-header-highlight-article-text > span,
 .main-header-highlight-article-text > a {
 	font-family: 'Raleway';
 	color: #FFFFFF;
