--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,24 +43,47 @@ table {
 }
 
 
+body {
+	background-image: url('/assets/images/bg.jpg');
+}
+
+#main-header,
+#content,
+#main-footer {
+	background-color: rgba(255, 255, 255, 0.5);
+}
 
 #loading {
 	display: none;
-	width: 20%;
+	width: 100%;
 	height: 100%;
 	position: fixed;
 	top: 0;
 	left: 0;
-	background-color: red;
+	background-color: rgba(255,255,255,0.5);
 	opacity: 1;
 	z-index: 9999;
+}
+
+.loading-center {
+	display: block;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.container {
+	position: relative;
 }
 
 .absolute-in-row {
 	width: 100%;
 	position: absolute;
 	top: 0;
-	left: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 a.hvr,
@@ -180,7 +203,10 @@ a.hvr,
 /* Content */
 #content {
 	position: relative;
-	left : 15px;
+	max-width: 1400px;
+	margin: 0 auto;
+	padding-left: 15px;
+	padding-right: 15px;
 	margin-bottom : 50px;
 }
 
@@ -484,30 +510,15 @@ a.hvr,
 
 /* footer */
 #main-footer{
-	background : #6ac2bd;
-	height : 150px;	
+	min-height : 150px;	
 	position : relative;
 	color : #FFFFFF;
+	background: #6ac2bd url('/assets/images/flamingo_triangle.png') right center no-repeat;
+	background-size: auto 100%;
 }
 
-#main-footer .container, #main-footer .container .row{
+#main-footer .container{
 	height : 100%;
-}
-
-.main-footer-logo{
-	height : 100%;
-	padding : 0px;
-	position : absolute;
-	right : 0px;
-	bottom : 0px;
-}
-
-.main-footer-logo img{
-	position : absolute;
-	bottom : 0px;
-	right : 0px;
-	max-height : 100%;
-	width : auto;
 }
 
 .main-footer-sharing{
@@ -519,11 +530,11 @@ a.hvr,
 
 .main-footer-sharing h2{
 	display : block;
-	width : 100%;
 	z-index : 2;
 	position : absolute;
 	top : 0px;
-	
+	left: 50%;
+	transform: translateX(-50%);
 	font-family: 'Raleway';
 	color: #FFFFFF;
 	font-size : 30px;
@@ -535,7 +546,6 @@ a.hvr,
 }
 
 .main-footer-sharing .network-icone {
-	width : 40px;
 	display : inline-block;
 	height : 100%;
 }
@@ -547,12 +557,7 @@ a.hvr,
 }
 
 .main-footer-sharing .network-icone img{
-	max-width : 100%;
-	height : auto;
 	position : absolute;
-	left : 0px;
-	top : 100%;
-	margin-top : -200%;
 }
 
 .main-footer-sharing .network-tumblr{
@@ -583,13 +588,40 @@ a.hvr,
 .main-footer-text-legal-mention{
 	padding : 20px;
 	font-size : 12px;
-	position : absolute;
 	bottom : 0px;
 }
 
 /*--------------------------------*/
 @media (max-width: 767px) {
-	
+	#main-footer .row {
+		height: 50px;
+	}
+
+	.main-footer-sharing .network-icone img{
+		width: auto;
+		height: 100%;
+		left : 50%;
+		top : 0;
+		transform: translateX(-50%);
+	}
+}
+
+@media (min-width: 768px) {
+	#main-footer .row {
+		height: 150px;
+	}
+
+	.main-footer-text-legal-mention{
+		position : absolute;
+	}
+
+	.main-footer-sharing .network-icone img{
+		width : 100%;
+		height : auto;
+		top : 100%;
+		left: 0;
+		margin-top : -200%;
+	}
 }
  
 @media (min-width: 768px) and (max-width: 991px) {
