--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,8 +184,7 @@ a.hvr,
 
 .main-header-highlight-article {
 	position: relative;
-	
-	background : green;
+	/*background : green;*/
 }
 
 .main-header-highlight-article img {
@@ -259,7 +258,7 @@ a.hvr,
 	overflow: hidden;
 	height:190px;
 	text-align : center;
-	background : green;
+	/*background : green;*/
 }
 
 	/* -- .article-list-item-text */
@@ -395,21 +394,13 @@ a.hvr,
 .article-image-container-size{
 	height : 100%;
 	width : 100%;
-	background :blue;
+	/*background :blue;*/
 	overflow : hidden;
 	text-align : center;
 }
 
 .complete-size-picture img, .half-size-picture img{
 	position : relative;
-}
-
-.complete-size-picture img.portrait, .complete-size-picture img.paysage, .half-size-picture img.portrait{
-	max-width : 100%;
-	min-width : 100%;
-	height : auto;
-	top : 100%;
-	margin-top : -200%;
 }
 
 .half-size-picture img.paysage{
@@ -420,6 +411,7 @@ a.hvr,
 	left : 100%;
 	margin-left : -200%;
 }
+
 
 	/* - .article-footer */
 .article-footer{
@@ -637,10 +629,18 @@ a.hvr,
 	}
 	
 	
-	
 	.article-list-item-images-container img{
 		max-width : 100%;
 		height : auto;
+	}
+
+	
+	.complete-size-picture img.portrait, .complete-size-picture img.paysage, .half-size-picture img.portrait{
+		max-height : 100%;
+		min-height : 100%;
+		width : auto;
+		left : 100%;
+		margin-left : -200%;
 	}
 }
 
@@ -663,6 +663,15 @@ a.hvr,
 
 	#welcomeMessage h2{
 		width : 35%;
+	}
+	
+	
+	.complete-size-picture img.portrait, .complete-size-picture img.paysage, .half-size-picture img.portrait{
+		max-width : 100%;
+		min-width : 100%;
+		height : auto;
+		top : 100%;
+		margin-top : -200%;
 	}
 }
  
