--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,6 +299,7 @@ a.hvr,
 .article-list-item-text {
 	position : absolute;
 	bottom : 20px;
+	max-width: 80%;
 }
 
 .article-list-item-text-title, .article-list-item-text-author{
@@ -312,6 +313,10 @@ a.hvr,
 	background-size: auto 90%;
 	font-size: 34px;
 	font-weight: bold;
+}
+
+.article-list-item-text-title a {
+	word-wrap: break-word;
 }
 
 .article-list-item-text-author {
