--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@ a.hvr,
 .article-list-item-text-title{
 	background: #fd6b6c;
 	background-size: auto 90%;
-	font-size: 34px;
+	font-size: 28px;
 	font-weight: bold;
 }
 
@@ -765,6 +765,10 @@ a.hvr,
 	
 	.network-icone{
 		padding : 0px 5px 0px 5px;
+	}
+	
+	.article-list-item-text-title{
+		font-size: 20px;
 	}
 }
 
